clusters/production/external-servers/comfy-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comfy-ui
spec:
  ports:
    - name: http
      port: 8188
      targetPort: 8188
      protocol: TCP
